<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layout">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/instructionTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/screen_margin_vertical"
                android:text="@string/enterPhone_message"
                android:textAppearance="@style/TextAppearance"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintBottom_toTopOf="@+id/flagImageView"
                app:layout_constraintVertical_chainStyle="spread_inside"
                />

        <TextView
                android:text="@string/enterPhone_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/countryTextView"
                android:textAppearance="@style/TextAppearance"
                app:layout_constraintStart_toEndOf="@+id/flagImageView"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/flagImageView"
                app:layout_constraintBottom_toBottomOf="@+id/flagImageView"
                />

        <Button
                android:text="@string/enterPhone_confirm"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:id="@+id/submitButton"
                style="@style/Button.Primary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/screen_margin_horizontal"
                android:layout_marginEnd="@dimen/screen_margin_horizontal"
                android:layout_marginBottom="@dimen/screen_margin_vertical"
                app:layout_constraintTop_toBottomOf="@+id/cellphoneImageView"
                app:layout_constraintHorizontal_bias="0.5"/>

        <ImageView
                android:src="@drawable/ic_flag_argentina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/flagImageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/countryTextView"
                app:layout_constraintHorizontal_chainStyle="packed"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toBottomOf="@+id/instructionTextView"
                app:layout_constraintBottom_toTopOf="@+id/phoneEditText"
                />

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/phoneEditText"
                app:layout_constraintTop_toBottomOf="@+id/flagImageView"
                app:layout_constraintBottom_toTopOf="@+id/cellphoneImageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                />

        <ImageView
                android:src="@color/colorAccent"
                android:id="@+id/cellphoneImageView"
                app:layout_constraintTop_toBottomOf="@+id/phoneEditText"
                app:layout_constraintBottom_toTopOf="@+id/submitButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="185dp"
                android:layout_height="160dp"
                />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>